--- a/Css/style.css
+++ b/Css/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Questrial', sans-serif;
-  }
+}
 
 .form-producto{
     display: grid;
@@ -10,6 +10,21 @@ body {
     gap: 1em;
     justify-content: center;
 
+}
+
+.form-categoria{
+    display: grid;
+    height: 100%;
+    grid-template-columns: repeat(1, 0.5fr);
+    grid-template-rows: repeat(2, 65px);
+    gap: 1em;
+    justify-content: center;
+
+}
+
+#categoria-nombre{
+    grid-column: 1 / span 1;
+    grid-row: 1 / span 1;
 }
 
 #producto{
@@ -27,6 +42,12 @@ body {
     grid-row: 3 / span 1;
 }
 
+#agregar-categoria{
+    grid-column: 1 / span 1;
+    grid-row: 2 / span 1;
+}
+
+
 .boton-container{
     display: flex;
     justify-content:center;
@@ -34,6 +55,11 @@ body {
 
 .tabla-container{
     width: 60%;
+    margin:auto;
+}
+
+.tabla-container-categorias{
+    width: 40%;
     margin:auto;
 }
 
